# thought-app

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  config.toml  my_database.db  readme.md
.github/workflows/: rust.yml
src/: client.rs  config.rs  db_operations.rs  email.rs  errors.rs  lib.rs  main.rs  reader_config.rs  thought.rs  writer_config.rs
tests/: reader_integration.rs  writer_integration.rs
