[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[features]
writer = []
reader = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = "0.37.0"
strum = "0.27.2"
strum_macros = "0.27.2"
lettre = "0.11"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }